# numpy

./: .gitignore  CMakeLists.txt  README.md
cmake/: PackageConfig.cmake.in  site.cfg.in  util.cmake
numpy/: version.py
